# aes-cpp

./: AESStaticlib.vcxproj  AESStaticlib.vcxproj.filters  AES_CPP.sln  CMakeLists.txt  LICENSE  Project1.vcxproj  Project1.vcxproj.filters  README.md
.github/workflows/: ci.yml  static-analysis.yml
Source/: AES.cpp  AES.h
Source/AES/: AES.cpp  AES.h  CMakeLists.txt  GFCPoly.h  GFPoly.h  Main.cpp  Sbox.cpp  Sbox.h  State.h
Source/old/: AES.h
examples/: Main.cpp
include/AES/: AES.h  GFCPoly.h  GFPoly.h  Sbox.h  State.h
src/: AES.cpp  GFPoly.cpp  Sbox.cpp
